more changes and cleanups

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hey there!</h2>
-										<!--<p>You've landed on my planet.<br />
-										See what it has to offer!</p>-->
+										<p>You've landed on my planet.<br />
+										See what it has to offer.</p>
 									</header>
-									<p>You've landed on my planet.<br />See what it has to offer!</p>
+									<p>I'm an undergraduate student born in China, raised in Canada, and educated in the U.S. <br /> If you want a brief roadmap, my resume can be found <u>here</u>.<br />Otherwise, feel free to explore!</p>
 								</div>
 							</section>
 
