added resume for people who dont care about my website kek

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										<p>You've landed on my planet.<br />
 										See what it has to offer.</p>
 									</header>
-									<p>I'm an undergraduate student born in China, raised in Canada, and educated in the U.S. <br /> If you want a brief roadmap, my resume can be found <u>here</u>.<br />Otherwise, feel free to explore!</p>
+									<p>I'm an undergraduate student born in China, raised in Canada, and educated in the U.S. <br /> For my world at a glance, my resume can be found <a href="assets/resume.pdf">here</a>.<br /><br />Otherwise, feel free to scroll, click, explore!</p>
 								</div>
 							</section>
 
