more changes to code layout and website look; more importantly, also added a mini-library for cool scrolling effects; might end up implementing scrolling again

--- a/hobbies.html
+++ b/hobbies.html
@@ -19,12 +19,12 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Andy Zhang</a></h1>
+					<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>
 					<p>homo sapiens<br />sophos moros</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">About Me</a></li>
+						<li><a href="landing.html">About Me</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="hobbies.html" class="active">Hobbies</a></li>
 						<li><a href="contact.html">Contact</a></li>
