--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Andy Zhang</a></h1>
+					<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>
 					<p>homo sapiens<br />sophos moros</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html" class="active">About Me</a></li>
+						<li><a href="landing.html">About Me</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="hobbies.html">Hobbies</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -48,11 +48,11 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Hey there!</h2>
-										<p>You've landed on my planet.<br />
-										See what it has to offer.</p>
+										<h2>hey there!</h2>
+										<p>welcome to my world.<br />
+										check it out!</p>
 									</header>
-									<p>I'm an undergraduate student born in China, raised in Canada, and educated in the U.S. <br /> For my world at a glance, my resume can be found <a href="assets/resume.pdf">here</a>.<br /><br />Otherwise, feel free to scroll, click, explore!</p>
+									<p>If you just want to see my world at a glance, my resume can be found <a href="assets/resume.pdf">here</a>.<br /><br />Otherwise, feel free to scroll, click, and explore!</p>
 								</div>
 							</section>
 
