--- a/projects.html
+++ b/projects.html
@@ -19,12 +19,12 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Andy Zhang</a></h1>
+					<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>
 					<p>homo sapiens<br />sophos moros</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">About Me</a></li>
+						<li><a href="landing.html">About Me</a></li>
 						<li><a href="projects.html" class="active">Projects</a></li>
 						<li><a href="hobbies.html">Hobbies</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -47,8 +47,9 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Projects</h3>
-									<p>Computer science is my main mojo. Here's some stuff I've done.</p>
+									<header class = "major">
+									<h3>Computer science is my main mojo. Here's some stuff I've done.</h3>
+									</header>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
