--- a/index.html
+++ b/index.html
@@ -425,5 +425,10 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
+			<!-- Velocity.js scripts -->
+			<script src="js/jquery-2.1.4.js"></script>
+			<script src="js/velocity.min.js"></script>
+			<script src="js/velocity.ui.min.js"></script>
+			<script src="js/main.js"></script> <!-- Resource jQuery -->
 	</body>
 </html>
