alerted people that my website isnt finished kek

--- a/landing.html
+++ b/landing.html
@@ -53,7 +53,8 @@
 										<p>an undergrad at Cornell University studying . . .<br/>
 										Computer Science, with a passion for . . .<br/>
 										machine learning! and the occasional . . .<br/>
-										pick-up basketball. But, most of all . . .</p>
+										pick-up basketball. But, most of all . . .<br/>
+										<br/>I procrastinate! Not quite finished with this page yet, but please come back later!</p>
 									</header>
 								</div>
 							</section>
