--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,8 @@
 							<section id="two">
 								<div class="container">
 									<header class = "major">
-									<h3>Computer science is my main mojo. Here's some stuff I've done.</h3>
+									<h3> // Computer science is my main mojo. Here's some stuff I've done.<br/>
+									 This land is still under construction! Come back later :)</h3>
 									</header>
 									<div class="features">
 										<article>
