added nice scrolling option

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li data-animation="1"><a href="landing.html">About Me</a></li>
-						<li data-animation="1"><a href="projects.html">Projects</a></li>
-						<li data-animation="1"><a href="hobbies.html">Hobbies</a></li>
-						<li data-animation="1"><a href="contact.html">Contact</a></li>
+						<li><a href="#one">About Me</a></li>
+						<li><a href="#two">Projects</a></li>
+						<li><a href="#three">Hobbies</a></li>
+						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -55,6 +55,93 @@
 									<p>If you just want to see my world at a glance, my resume can be found <a href="assets/resume.pdf">here</a>.<br /><br />Otherwise, feel free to scroll, click, and explore!</p>
 								</div>
 							</section>
+
+							<section id="two">
+								<div class="container">
+									<header class="major">
+										<h2>I am . . .</h2>
+										<p>an undergrad at Cornell University studying . . .<br/>
+										Computer Science, with a passion for . . .<br/>
+										machine learning! and the occasional . . .<br/>
+										pick-up basketball. But, most of all . . .<br/>
+										<br/>I procrastinate! Not quite finished with this page yet, but please come back later!</p>
+									</header>
+								</div>
+							</section>
+
+							<section id="two">
+								<div class="container">
+									<header class = "major">
+									<h3> // Computer science is my main mojo. Here's some stuff I've done.<br/>
+									 This land is still under construction! Come back later :)</h3>
+									</header>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Possibly broke spacetime</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Terraformed a small moon</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Snapped dark matter in the wild</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+							<section id="three">
+								<div class="container">
+									<h3>Hobbies</h3>
+									<p>Life outside of computer science is what keeps me sane and identifiable as a human.</p>
+									<ul class="feature-icons">
+										<li class="fa-code">Write all the code</li>
+										<li class="fa-cubes">Stack small boxes</li>
+										<li class="fa-book">Read books and stuff</li>
+										<li class="fa-coffee">Drink much coffee</li>
+										<li class="fa-bolt">Lightning bolt</li>
+										<li class="fa-users">Shadow clone technique</li>
+									</ul>
+								</div>
+							</section>
+
+							<section id="four">
+					<div class="container">
+						<h3>Contact Me</h3>
+						<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+						<form method="post" action="#">
+							<div class="row uniform">
+								<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+								<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+							</div>
+							<div class="row uniform">
+								<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+							</div>
+							<div class="row uniform">
+								<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+							</div>
+							<div class="row uniform">
+								<div class="12u">
+									<ul class="actions">
+										<li><input type="submit" class="special" value="Send Message" /></li>
+										<li><input type="reset" value="Reset Form" /></li>
+									</ul>
+								</div>
+							</div>
+						</form>
+					</div>
+				</section>
 
 						<!-- Five -->
 						<!--
