added stuff kek

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Andy Zhang</title>
@@ -27,7 +22,6 @@
 						<li><a href="#one">About Me</a></li>
 						<li><a href="#two">Projects</a></li>
 						<li><a href="#three">Hobbies</a></li>
-						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -49,10 +43,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>hey there!</h2>
-										<p>welcome to my world.<br />
-										check it out!</p>
+										<p>welcome to my world.</p>
 									</header>
-									<p>If you just want to see my world at a glance, my resume can be found <a href="assets/resume.pdf">here</a>.<br /><br />Otherwise, feel free to scroll, click, and explore!</p>
+									<p>If you're just looking for a pamphlet, my resume can be found <a href="assets/resume.pdf">here</a>.<br /><br />Otherwise, feel free to scroll, click, and explore!</p>
 								</div>
 							</section>
 
@@ -72,29 +65,28 @@
 							<section id="two">
 								<div class="container">
 									<header class = "major">
-									<h3> // Computer science is my main mojo. Here's some stuff I've done.<br/>
-									 This land is still under construction! Come back later :)</h3>
+									<h3>Computer science is my main mojo.</h3>
 									</header>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Robot Doctor Eyes</h4>
+												<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>A Whole New World</h4>
+												<p>literally an entirely different world of Critters, built with Java, complete with a Critter language, compiler, interpreter, simulator, and more!</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Yelp ft. Google Maps</h4>
+												<p>a fun Android project that lets you drool over pictures of food from nearby restaurants. Best part is, you get to pick which kinds of food to see!</p>
 											</div>
 										</article>
 									</div>
@@ -115,33 +107,6 @@
 									</ul>
 								</div>
 							</section>
-
-							<section id="four">
-					<div class="container">
-						<h3>Contact Me</h3>
-						<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-						<form method="post" action="#">
-							<div class="row uniform">
-								<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-								<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							</div>
-							<div class="row uniform">
-								<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-							</div>
-							<div class="row uniform">
-								<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-							</div>
-							<div class="row uniform">
-								<div class="12u">
-									<ul class="actions">
-										<li><input type="submit" class="special" value="Send Message" /></li>
-										<li><input type="reset" value="Reset Form" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</div>
-				</section>
 
 						<!-- Five -->
 						<!--
