memes for pagespeed teens

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/me.png" alt="" /></span>
 					<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>
 					<p>homo sapiens<br />sophos moros</p>
 				</header>
@@ -98,12 +98,10 @@
 									<h3>Hobbies</h3>
 									<p>Life outside of computer science is what keeps me sane and identifiable as a human.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">Basketball</li>
+										<li class="fa-cubes">Hiking</li>
+										<li class="fa-book">Driving</li>
+										<li class="fa-coffee">Learning</li>
 									</ul>
 								</div>
 							</section>
