--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
 									</header>
 									<div class="features">
 										<article>
-											<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
+											<a href="#" class="image"><img src="images/blood.png" alt="" /></a>
 											<div class="inner">
 												<h4>Robot Doctor Eyes</h4>
 												<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.</p>
 											</div>
 										</article>
 										<article>
-											<!--<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a> -->
+											<a href="#" class="image"><img src="images/critterworld.png" alt="" /></a>
 											<div class="inner">
 												<h4>A Whole New World</h4>
 												<p>literally an entirely different world of Critters, built with Java, complete with a Critter language, compiler, interpreter, simulator, and more!</p>
 											</div>
 										</article>
 										<article>
-											<!-- <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a> -->
+											<a href="#" class="image"><img src="images/magafood.png" alt="" /></a>
 											<div class="inner">
 												<h4>Yelp ft. Google Maps</h4>
 												<p>a fun Android project that lets you drool over pictures of food from nearby restaurants. Best part is, you get to pick which kinds of food to see!</p>
@@ -102,6 +102,8 @@
 										<li class="fa-cubes">Hiking</li>
 										<li class="fa-book">Driving</li>
 										<li class="fa-coffee">Learning</li>
+										<li class="fa-book">Reading</li>
+										<li class="fa-book">Gaming</li>
 									</ul>
 								</div>
 							</section>
