added images and made stuff look nicer

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one">About Me</a></li>
-						<li><a href="#two">Projects</a></li>
-						<li><a href="#three">Hobbies</a></li>
+						<li><a href="#two">About Me</a></li>
+						<li><a href="#three">Projects</a></li>
+						<li><a href="#four">Hobbies</a></li>
 					</ul>
 				</nav>
+				<!---
 				<footer>
 					<ul class="icons">
 						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -31,6 +32,7 @@
 						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
+				-->
 			</section>
 
 		<!-- Wrapper -->
@@ -51,18 +53,36 @@
 
 							<section id="two">
 								<div class="container">
-									<header class="major">
-										<h2>I am . . .</h2>
-										<p>an undergrad at Cornell University studying . . .<br/>
-										Computer Science, with a passion for . . .<br/>
-										machine learning! and the occasional . . .<br/>
-										pick-up basketball. But, most of all . . .<br/>
-										<br/>I procrastinate! Not quite finished with this page yet, but please come back later!</p>
+									<header class = "major">
+									<h3>I am, therefore I...</h3>
 									</header>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/cornell2.png" alt="" /></a>
+											<div class="inner">
+												<h4>learn</h4>
+												<p>currently an undergrad at Cornell University pursuing a B.S. in Computer Science.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/serene.png" alt="" /></a>
+											<div class="inner">
+												<h4>dream</h4>
+												<p>curious by default, cautious by nature.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/coolthing.png" alt="" /></a>
+											<div class="inner">
+												<h4>engineer</h4>
+												<p>a self-flying aircraft with endless applications in agriculture, search-and-rescue, and augmented reality.</p>
+											</div>
+										</article>
+									</div>
 								</div>
 							</section>
 
-							<section id="two">
+							<section id="three">
 								<div class="container">
 									<header class = "major">
 									<h3>Computer science is my main mojo.</h3>
@@ -76,7 +96,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/critterworld.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/critterworld2.png" alt="" /></a>
 											<div class="inner">
 												<h4>A Whole New World</h4>
 												<p>literally an entirely different world of Critters, built with Java, complete with a Critter language, compiler, interpreter, simulator, and more!</p>
@@ -93,7 +113,7 @@
 								</div>
 							</section>
 
-							<section id="three">
+							<section id="four">
 								<div class="container">
 									<h3>Hobbies</h3>
 									<p>Life outside of computer science is what keeps me sane and identifiable as a human.</p>
@@ -101,9 +121,7 @@
 										<li class="fa-code">Basketball</li>
 										<li class="fa-cubes">Hiking</li>
 										<li class="fa-book">Driving</li>
-										<li class="fa-coffee">Learning</li>
 										<li class="fa-book">Reading</li>
-										<li class="fa-book">Gaming</li>
 									</ul>
 								</div>
 							</section>
