more revamping kek

--- a/index.html
+++ b/index.html
@@ -7,36 +7,49 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
+
+		<!--
+		<ul class="topnav" id="myTopnav">
+		  <li><a href="#home">Home</a></li>
+		  <li><a href="#news">News</a></li>
+		  <li><a href="#contact">Contact</a></li>
+		  <li><a href="#about">About</a></li>
+		  <li class="icon">
+		    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+		  </li>
+		</ul>
+		-->
 		<!-- Header -->
 			<section id="header">
 				<header>
 					<div id="circle">
 						<a href="index.html"><img src="images/me.png" class="curve"></a>
-						<h1>Hello!</h1>
+						<h1 class="thick">Hello!</h1>
 						<p>Glad you found my website.</p>
-						<p>If you're just looking for my resume, click <a href="assets/resume.pdf">here</a>.<br/>Otherwise, feel free to explore more about me and what I've done.</p>
+						<p>If you're looking for my resume, click <a href="assets/resume.pdf">here</a>.<br/>Otherwise, feel free to explore more about me.</p>
 					</div>
 					<!--<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>-->
 				</header>
 			</section>
 
-			<section id="about">
-				<h1><br/>I'm currently an undergrad at Cornell University studying Computer Science and Electrical Engineering. My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/><br/></h1>
+			<section id="main">
+				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/>Here's some stuff I've done:<br/><br/><br/></p>
+
 			</section>
 
 			<section id="projects">
 				<div id="project">
-					<h1>Robot Doctor Eyes<br/><br/></h1>
+					<p class="thick">Robot Doctor Eyes<br/><br/></p>
 					<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.<br/></p>
 				</div>
 
 				<div id="project">
-					<h1>A Whole New World<br/><br/></h1>
+					<p class="thick">A Whole New World<br/><br/></p>
 					<p>literally an entirely different world of Critters, built with Java, complete with a Critter language, compiler, interpreter, simulator, and more.<br/></p>
 				</div>
 
 				<div id="project">
-					<h1>Yelp ft. Google Maps<br/><br/></h1>
+					<p class="thick">Yelp ft. Google Maps<br/><br/></p>
 					<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
 				</div>
 			</section>
