--- a/projects.html
+++ b/projects.html
@@ -1,83 +1,81 @@
 <!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Andy Zhang</title>
+		<title>Andy Zhang's Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
+		<!--
+		<ul class="topnav" id="myTopnav">
+		  <li><a href="#home">Home</a></li>
+		  <li><a href="#news">News</a></li>
+		  <li><a href="#contact">Contact</a></li>
+		  <li><a href="#about">About</a></li>
+		  <li class="icon">
+		    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+		  </li>
+		</ul>
+		-->
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
-					<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>
-					<p>homo sapiens<br />sophos moros</p>
+					<div id="circle">
+						<a href="index.html"><img src="images/me.png" class="curve"></a>
+						<h1 class="thick">Hello!</h1>
+						<p>Glad you found my website.</p>
+						<p>If you're looking for my resume, click <a href="assets/resume.pdf">here</a>.<br/>Otherwise, feel free to explore more about me.</p>
+					</div>
+					<!--<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>-->
 				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="landing.html">About Me</a></li>
-						<li><a href="projects.html" class="active">Projects</a></li>
-						<li><a href="hobbies.html">Hobbies</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
 			</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<section id="main">
+				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/><br/></p>
+			</section>
 
-				<!-- Main -->
-					<div id="main">
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<header class = "major">
-									<h3> // Computer science is my main mojo. Here's some stuff I've done.<br/>
-									 This land is still under construction! Come back later :)</h3>
-									</header>
-									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-					</div>
-			</div>
+			<section id="projects">
+				<div id="project">
+					<p class="thick">Robot Doctor Eyes<br/><br/></p>
+					<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.<br/></p>
+				</div>
+
+				<div id="project">
+					<p class="thick">A Whole New World<br/><br/></p>
+					<p>literally an entirely different world of Critters, built with Java, complete with a Critter language, compiler, interpreter, simulator, and more.<br/></p>
+				</div>
+
+				<div id="project">
+					<p class="thick">Yelp ft. Google Maps<br/><br/></p>
+					<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
+				</div>
+			</section>
+
+			<!--
+			<section id="hobbies">
+				<div id="hobby">
+					<h1>Basketball<br/><br/></h1>
+					<p>Always up for a game of pickup. Avid follower of the NBA.<br/></p>
+				</div>
+
+				<div id="hobby">
+					<h1>Hiking<br/><br/></h1>
+					<p>Nature is nice.<br/></p>
+				</div>
+
+				<div id="hobby">
+					<h1>Reading<br/><br/></h1>
+					<p>Good books only.<br/></p>
+				</div>
+
+				<div id="hobby">
+					<h1>Drawing<br/><br/></h1>
+					<p>Typical shy doodler.<br/></p>
+				</div>
+			</section>
+			-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -87,6 +85,5 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
