better picture kek

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<section id="header">
 				<header>
 					<div id="circle">
-						<a href="index.html"><img src="images/me.png" class="curve"></a>
+						<a href="index.html"><img src="images/me2.png" class="curve"></a>
 						<h1 class="thick">Hello!</h1>
 						<p>Glad you found my website.</p>
 						<p>If you're looking for my resume, click <a href="assets/resume.pdf">here</a>.<br/>Otherwise, feel free to explore more about me.</p>
