--- a/index.html
+++ b/index.html
@@ -38,20 +38,23 @@
 			</section>
 
 			<section id="projects">
-				<div id="project">
-					<p class="thick">Robot Doctor Eyes<br/><br/></p>
-					<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.<br/></p>
-				</div>
+					<div class="project">
+						<img src="images/blood.png" width="220" height="130">
+						<p class="thick">Robot Doctor Eyes<br/><br/></p>
+						<p>a Python/OpenCV module that processes microscope images of white blood cells and classifies them.<br/></p>
+					</div>
 
-				<div id="project">
-					<p class="thick">A Whole New World<br/><br/></p>
-					<p>literally an entirely different world of Critters, built with Java, complete with a Critter language, compiler, interpreter, simulator, and more.<br/></p>
-				</div>
+					<div class="project">
+						<img src="images/critterworld2.png" width="220" height="130">
+						<p class="thick">A Whole New World<br/><br/></p>
+						<p>built with Java, complete with a Critter language, compiler, interpreter, simulator, and more.<br/></p>
+					</div>
 
-				<div id="project">
-					<p class="thick">Yelp ft. Google Maps<br/><br/></p>
-					<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
-				</div>
+					<div class="project">
+						<img src="images/magafood.png" width="220" height="130">
+						<p class="thick">Yelp ft. Google Maps<br/><br/></p>
+						<p>a fun Android project that lets you drool over pictures of food from nearby restaurants.</p>
+					</div>
 			</section>
 
 			<!--
@@ -77,6 +80,10 @@
 				</div>
 			</section>
 			-->
+
+			<footer>
+
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
